Bug 75856 - FILEOPEN: Incorrect page height import on a .doc file
Summary: FILEOPEN: Incorrect page height import on a .doc file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Justin L
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords: filter:doc
Depends on:
Blocks:
 
Reported: 2014-03-06 22:35 UTC by Aymeric
Modified: 2017-05-18 18:23 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Example Word document (481.00 KB, application/msword)
2014-03-06 22:35 UTC, Aymeric
Details
Expected rendering (as produced by Microsoft Word) (357.00 KB, application/pdf)
2014-03-06 22:36 UTC, Aymeric
Details
Current rendering by LibreOffice (display same as PDF output) (247.96 KB, application/pdf)
2014-03-06 22:37 UTC, Aymeric
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aymeric 2014-03-06 22:35:45 UTC
Created attachment 95258 [details]
Example Word document

When attempt to view the attached Word document, nothing is displayed correctly.
It seem that, all the text move to a "header" part, which is positioned at the bottom of the document.


Step to reproduce: 
1. Open the document in LO
2. View…

Current behavior:

Unreadable document

Expected behavior:

Readable document.

Operating system: Xubuntu 12.04.4 LTS
Version: 4.2.2.1 (Installed: 1:4.2.2~rc1-0ubuntu1~precise1 (from official Libreoffice ppa))
Build ID: 420m0(Build:1)
Comment 1 Aymeric 2014-03-06 22:36:51 UTC
Created attachment 95259 [details]
Expected rendering (as produced by Microsoft Word)
Comment 2 Aymeric 2014-03-06 22:37:32 UTC
Created attachment 95260 [details]
Current rendering by LibreOffice (display same as PDF output)
Comment 3 Joel Madero 2014-03-06 22:47:41 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.2.0.0.alpha0+Build ID: 09a4c4d176ff97ab8ff4027af83a549991667baf
Date:   Tue Feb 25 19:58:48 2014 +0100 
Platform :Ubuntu 13.10
DE: GNOME3

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Major - complete loss of formatting
High - default



Note: This is a tricky one as it really might be multiple bugs in one that combine to make this document garbage in LibreOffice. 

@Aymeric - what would be useful is if you could test older versions of LibreOffice and report back if some are better (or perfect). 
http://downloadarchive.documentfoundation.org/libreoffice/old/

If you can verify the problem on older versions please update the version field as the version is the oldest version where we see the problem. Thanks!

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 4 Aymeric 2014-03-07 12:54:24 UTC
Thanks Joel for your reply.

As you asked, I tried with some other (older) version of LibreOffice, on a freshly installed computer.

Results: this Word document display exactly the same way (bogus/unreadable) with LibreOffice:
* 4.1.5.3
* 4.0.6.2
* 3.6.7.2
* 3.3.4
* 3.3.0

So, I'm assuming this bug inherit from OpenOffice.org
Comment 5 Arnaud Versini 2014-03-12 19:38:37 UTC
@Aymeric, can you add to the bug a capture o
Comment 6 Arnaud Versini 2014-03-12 19:41:58 UTC
@Aymeric sorry :-)

Seems page height is wrong, 300cm is too much
Comment 7 Aymeric 2014-03-13 10:14:27 UTC
After further investigation, this bug is not reproducible on Linux x86 platform neither on Windows XP SP3 (x86 also).

All my previous regression test have been done on an Ubuntu 12.04.4 amd64 (x86-64).

This bug isn't Debian-based specific, I can reproduce it on Fedora 19 amd64 with LO 4.1.5.

I don't know (and I can't test), if this affect other 64bits OS (Mac/Windows), or if it's only Linux amd64 specific.
Comment 8 Buovjaga 2014-10-06 11:00:11 UTC
Renders fine here on Win 7 64-bit 4.3.2.2 and today's 4.4.0.0 dev build.
Comment 9 Aymeric 2014-10-25 21:48:06 UTC
Sorry but still an issue with 4.3.2.2 on Linux amd64.

As as said before, this bug only affects 64 bits version of LO, not 32 bits. As far as know, Windows builds of LO are only 32 bits. 

I can't test with 4.4.0.0 dev 64 bits.
Comment 10 Joel Madero 2014-11-02 16:26:47 UTC
Never confirmed by QA team - moving back to UNCONFIRMED.
Comment 11 tommy27 2014-12-06 14:15:06 UTC
(In reply to Joel Madero from comment #10)
> Never confirmed by QA team - moving back to UNCONFIRMED.

Joel, you confirmed it in comment 3. so setting it back to NEW.

anyway bug is not reproducible under Win8.1 x64 using LO 4.3.4.1
looks like Linux only

@Aymeric
please retest with current 4.3.4.1 and give feedback
Comment 12 Buovjaga 2014-12-08 06:59:29 UTC
I reproduced the wrong rendering on Linux.

Ubuntu 14.10 64-bit Version: 4.5.0.0.alpha0+
Build ID: c2d8fed349747f526a74cde3fcd36c494fc199b2
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2014-12-07_21:52:50
Comment 13 QA Administrators 2015-12-20 16:16:52 UTC Comment hidden (obsolete)
Comment 14 Aymeric 2015-12-21 18:22:16 UTC
Hello All,

I tried with LibreOffice 5.0.4.2, this issue is still present (Debian 8 uptodate).

Looks like exactly as explained in my first original report.

Regards,

Aymeric.
Comment 15 Buovjaga 2016-12-15 08:25:56 UTC
J. Luth had a theory about 64-bitness, but I am confirming Win 64bit build shows it like expected rendering. So still Linux-only.

Version: 5.2.4.1 (x64)
Build ID: 9b50003582f07ac674d6451e411e9b77cccd2b22
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
Locale: fi-FI (fi_FI); Calc: group
Comment 16 Justin L 2016-12-15 17:32:44 UTC
A "long" variable in 64bit Linux is 64bit, but under 64bit Windows it compiles as 32bit.  Proposed fix https://gerrit.libreoffice.org/32051
Comment 17 Commit Notification 2016-12-15 20:44:33 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=426215ca6fedd13ece07463ee95dd33bdb1a9a28

tdf#75856 SwTwips: replace with unambiguous sal_Int32

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Buovjaga 2016-12-16 17:06:35 UTC
Thanks, Justin! Now it works on Linux.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 06ea887f8ba34a628d7641eab210501f7bd2493d
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on December 16th 2016
Comment 19 Commit Notification 2016-12-22 14:30:01 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=588d917d0af740bb75c7cf5085f0db63e35f2df0&h=libreoffice-5-3

tdf#75856 SwTwips: replace with unambiguous sal_Int32

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.