tdf#75856 SwTwips: replace with unambiguous sal_Int32

Change-Id: Ifa59f8dad31ad0445c32ac0265dffff7c1573da4
Reviewed-on: https://gerrit.libreoffice.org/32051
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 426215ca6fedd13ece07463ee95dd33bdb1a9a28)
Reviewed-on: https://gerrit.libreoffice.org/32330
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>